--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,6 +1,98 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - Evening Light Tabernacle</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
+</head>
 <body>
-	<div id="header"></div>
-	<!-- Page content here -->
-	<div id="footer"></div>
-	<script src="../js/main.js"></script>
+    <!-- Header -->
+    <div id="header"></div>
+
+    <!-- Contact Section -->
+    <section class="contact-section scroll-reveal" style="margin-top: 80px;">
+        <div class="container">
+            <h2 class="animate-on-load">CONTACT US</h2>
+            <div class="contact-container">
+                <form class="contact-form animate-delay-1">
+                    <div class="form-group">
+                        <label for="name">Full Name *</label>
+                        <input type="text" id="name" name="name" required placeholder="Enter your full name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">Email Address *</label>
+                        <input type="email" id="email" name="email" required placeholder="Enter your email address">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" id="phone" name="phone" placeholder="Enter your phone number">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="subject">Subject *</label>
+                        <input type="text" id="subject" name="subject" required placeholder="What is this regarding?">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Message *</label>
+                        <textarea id="message" name="message" required placeholder="Write your message here..."></textarea>
+                    </div>
+
+                    <button type="submit" class="btn">SEND MESSAGE</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Information -->
+    <section class="contact-info-section">
+        <div class="container">
+            <h2>GET IN TOUCH</h2>
+            <div class="contact-info">
+                <div class="contact-info-item">
+                    <h4><i class="fas fa-map-marker-alt"></i> Address</h4>
+                    <p>Plot/Stand Number: CHI/23 19174<br>Matero Hillside<br>Lusaka, Zambia</p>
+                </div>
+
+                <div class="contact-info-item">
+                    <h4><i class="fas fa-envelope"></i> Email</h4>
+                    <p><a href="mailto:olivermumbo@gmail.com">olivermumbo@gmail.com</a></p>
+                </div>
+
+                <div class="contact-info-item">
+                    <h4><i class="fas fa-phone"></i> Phone</h4>
+                    <p>Cell: <a href="tel:+260979223720">+260 979 223 720</a></p>
+                </div>
+
+                <div class="contact-info-item">
+                    <h4><i class="fas fa-clock"></i> Service Times</h4>
+                    <p>Thursday: 5:00 PM</p>
+                    <p>Sunday: 8:00 AM</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Map Section (Placeholder) -->
+    <section class="map-section" style="background: var(--bg-light); padding: 3rem 2rem;">
+        <div class="container">
+            <h2>FIND US</h2>
+            <div style="background: #e0e0e0; height: 400px; border-radius: 12px; display: flex; align-items: center; justify-content: center; color: #666;">
+                <p style="text-align: center; padding: 2rem;">
+                    <strong>Map Placeholder</strong><br>
+                    Church location map will be displayed here
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <div id="footer"></div>
+    <script src="../js/main.js" type="module"></script>
 </body>
+</html>
