--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,20 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
 </head>
 <body>
+    <!-- Loading Screen -->
+    <div id="loading-screen" class="loading-screen">
+        <div class="loading-content">
+            <img src="assets/images/ELT4.png" alt="Evening Light Tabernacle" class="loading-logo">
+            <div class="loading-dots">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </div>
+    </div>
+
     <!-- Announcement Banner (Mobile - shows below navbar) -->
     <div id="announcement-banner" class="announcement-banner" style="display: none;">
         <div class="announcement-banner-content">
@@ -132,7 +146,7 @@
         <!---Gallery Preview-->
         <section class="gallery-preview scroll-reveal">
             <h2 class="animate-on-load">GALLERY</h2>
-            <div class="gallery-grid">
+            <div class="gallery-grid home-gallery">
                 <div class="gallery-item animate-delay-1">
                     <img src="assets/images/placeholder.png" alt="Church Worship" loading="lazy">
                 </div>
