Add loading screen, fix mobile gallery, improve admin login, and optimize footer

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Loading Screen -->
     <div id="loading-screen" class="loading-screen">
         <div class="loading-content">
-            <img src="assets/images/ELT4.png" alt="Evening Light Tabernacle" class="loading-logo">
+            <img src="assets/images/loginlogo.png" alt="Evening Light Tabernacle" class="loading-logo">
             <div class="loading-dots">
                 <span class="dot"></span>
                 <span class="dot"></span>
