--- a/admin/login.html
+++ b/admin/login.html
@@ -54,6 +54,11 @@
                     <i class="fas fa-sign-in-alt"></i>
                     Sign In
                 </button>
+                
+                <a href="../index.html" class="back-to-website-btn">
+                    <i class="fas fa-home"></i>
+                    Back to Main Website
+                </a>
             </form>
             
             <div class="login-footer">
