Add loading screen, fix mobile gallery, improve admin login, and optimize footer

--- a/admin/login.html
+++ b/admin/login.html
@@ -55,10 +55,12 @@
                     Sign In
                 </button>
                 
-                <a href="../index.html" class="back-to-website-btn">
-                    <i class="fas fa-home"></i>
-                    Back to Main Website
-                </a>
+                <div style="text-align: center;">
+                    <a href="../index.html" class="back-to-website-btn">
+                        <i class="fas fa-home"></i>
+                        Back to Main Website
+                    </a>
+                </div>
             </form>
             
             <div class="login-footer">
