worked on the gallery section

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -16,8 +16,8 @@
     <section class="gallery-preview scroll-reveal" style="margin-top: 80px;">
         <div class="container">
             <h2 class="animate-on-load">PHOTO GALLERY</h2>
-            <!-- Dynamic gallery grid - will be populated by JavaScript -->
-            <div class="gallery-grid" id="galleryContainer">
+            <!-- Dynamic gallery grid - will be populated by JavaScript from Supabase -->
+            <div class="gallery-grid full-gallery" id="galleryContainer">
                 <p style="grid-column: 1/-1; text-align: center; color: #666; padding: 20px;">Loading photos...</p>
             </div>
         </div>
