--- a/index.html
+++ b/index.html
@@ -146,19 +146,9 @@
         <!---Gallery Preview-->
         <section class="gallery-preview scroll-reveal">
             <h2 class="animate-on-load">GALLERY</h2>
-            <div class="gallery-grid home-gallery">
-                <div class="gallery-item animate-delay-1">
-                    <img src="assets/images/placeholder.png" alt="Church Worship" loading="lazy">
-                </div>
-                <div class="gallery-item animate-delay-2">
-                    <img src="assets/images/placeholder.png" alt="Community Service" loading="lazy">
-                </div>
-                <div class="gallery-item animate-delay-3">
-                    <img src="assets/images/placeholder.png" alt="Youth Ministry" loading="lazy">
-                </div>
-                <div class="gallery-item animate-delay-4">
-                    <img src="assets/images/placeholder.png" alt="Bible Study" loading="lazy">
-                </div>
+            <div class="gallery-grid home-gallery" id="homeGalleryPreview">
+                <!-- Dynamic gallery preview - will be populated by JavaScript from Supabase -->
+                <div style="grid-column: 1/-1; text-align: center; color: #666; padding: 20px;">Loading photos...</div>
             </div>
             <a href="pages/gallery.html" class="btn">VIEW FULL GALLERY</a>
         </section>
