edited the website

--- a/pages/announcements.html
+++ b/pages/announcements.html
@@ -16,13 +16,13 @@
     <section class="announcements scroll-reveal" style="margin-top: 80px;">
         <div class="container">
             <h2 class="animate-on-load">ANNOUNCEMENTS</h2>
-            <div class="announcements-list">
+            <ul class="announcements-list">
                 <!-- Announcements will be loaded dynamically from Supabase -->
-                <div style="text-align: center; padding: 40px;">
+                <li style="text-align: center; padding: 40px; list-style: none;">
                     <i class="fas fa-spinner fa-spin" style="font-size: 32px; color: #667eea;"></i>
                     <p>Loading announcements...</p>
-                </div>
-            </div>
+                </li>
+            </ul>
         </div>
     </section>
 
