--- a/index.html
+++ b/index.html
@@ -72,31 +72,9 @@
         </div>
     </div>
 
-    <!-- Announcement Banner (Mobile - shows below navbar) -->
-    <div id="announcement-banner" class="announcement-banner" style="display: none;">
-        <div class="announcement-banner-content">
-            <span class="announcement-banner-icon"><i class="fas fa-bullhorn"></i></span>
-            <span class="announcement-banner-text"></span>
-            <button class="announcement-banner-close" onclick="closeAnnouncementBanner()"><i class="fas fa-times"></i></button>
-        </div>
-    </div>
-
     <!-- Header -->
     <!--Get header and footer from C:\projects\church-website\src\components-->
         <div id="header"></div>
-        
-    <!-- Announcement Sidebar (Desktop) -->
-    <div id="announcement-sidebar" class="announcement-sidebar" style="display: none;">
-        <div class="announcement-sidebar-header">
-            <h4><i class="fas fa-bullhorn"></i> Latest Announcement</h4>
-            <button class="announcement-sidebar-close" onclick="closeAnnouncementSidebar()"><i class="fas fa-times"></i></button>
-        </div>
-        <div class="announcement-sidebar-content">
-            <h3 id="sidebar-announcement-title"></h3>
-            <p id="sidebar-announcement-text"></p>
-            <a href="pages/announcements.html" class="btn-small">View All</a>
-        </div>
-    </div>
 
         <!-- Hero Section -->
         <div class="hero">
@@ -107,6 +85,25 @@
                 <a href="pages/sermons.html" id="hero-button" class="hero-btn">EXPLORE OUR CHURCH</a>
             </div>
         </div>
+
+        <!-- Latest Announcement Section -->
+        <section class="latest-announcement-section scroll-reveal" id="latestAnnouncementSection" style="display: none;">
+            <div class="container">
+                <div class="announcement-card">
+                    <div class="announcement-icon">
+                        <i class="fas fa-bullhorn"></i>
+                    </div>
+                    <div class="announcement-content">
+                        <h3 id="announcement-title"></h3>
+                        <p id="announcement-text"></p>
+                        <div id="announcement-links" class="announcement-action-links"></div>
+                    </div>
+                    <a href="pages/announcements.html" class="announcement-view-all">
+                        View All Announcements <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
         
         <!-- Service Times Section -->
         <section class="service-times-section scroll-reveal" id="service-times">
