edited the website

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://byteban.github.io/eveninglight/">
-    <meta property="twitter:title" content="Evening Light Tabernacle - Welcome Home">
+    <meta property="twitter:title" content="Evening Light Tabernacle - The Spoken Word ministry">
     <meta property="twitter:description" content="Welcome to Evening Light Tabernacle. Join our vibrant Christian community for worship, fellowship, and spiritual growth.">
     <meta property="twitter:image" content="https://byteban.github.io/eveninglight/assets/images/ELT4.png">
     
@@ -89,18 +89,12 @@
         <!-- Latest Announcement Section -->
         <section class="latest-announcement-section scroll-reveal" id="latestAnnouncementSection" style="display: none;">
             <div class="container">
-                <div class="announcement-card">
-                    <div class="announcement-icon">
-                        <i class="fas fa-bullhorn"></i>
-                    </div>
-                    <div class="announcement-content">
-                        <h3 id="announcement-title"></h3>
-                        <p id="announcement-text"></p>
-                        <div id="announcement-links" class="announcement-action-links"></div>
-                    </div>
-                    <a href="pages/announcements.html" class="announcement-view-all">
-                        View All Announcements <i class="fas fa-arrow-right"></i>
-                    </a>
+                <h2>ANNOUNCEMENT</h2>
+                <div class="announcement-box">
+                    <h3 id="announcement-title"></h3>
+                    <p id="announcement-date" class="announcement-date"></p>
+                    <p id="announcement-text"></p>
+                    <div id="announcement-links" class="announcement-links"></div>
                 </div>
             </div>
         </section>
@@ -136,6 +130,25 @@
                     <h3>Title of the Latest Sermon</h3>
                     <p>Brief description of the latest sermon goes here.</p>
                     <a href="pages/sermons.html" class="btn">WATCH NOW</a>
+                </div>
+            </div>
+        </section>
+
+        <!---Church Location Section-->
+        <section class="church-location scroll-reveal">
+            <h2 class="animate-on-load">FIND US</h2>
+            <div class="location-container">
+                <div class="location-map">
+                    <a href="https://www.google.com/maps/place/Evening+Light+Tarbenacle/@-15.3657211,28.2543804,17z/data=!3m1!4b1!4m6!3m5!1s0x1940f554c7607119:0x22f3783f425856c5!8m2!3d-15.3657263!4d28.2569553!16s%2Fg%2F11h89fzxlg?authuser=0&entry=ttu&g_ep=EgoyMDI1MTAyOC4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/images/eltmap.png" alt="Evening Light Tabernacle Location in Lusaka - Click to view on Google Maps" loading="lazy">
+                    </a>
+                </div>
+                <div class="location-info">
+                    <h3><i class="fas fa-map-marker-alt"></i> Our Location</h3>
+                    <p>Visit us at Evening Light Tabernacle in Lusaka, Zambia. We'd love to welcome you to our church family! Click the map or the button below to get directions.</p>
+                    <a href="https://www.google.com/maps/place/Evening+Light+Tarbenacle/@-15.3657211,28.2543804,17z/data=!3m1!4b1!4m6!3m5!1s0x1940f554c7607119:0x22f3783f425856c5!8m2!3d-15.3657263!4d28.2569553!16s%2Fg%2F11h89fzxlg?authuser=0&entry=ttu&g_ep=EgoyMDI1MTAyOC4wIKXMDSoASAFQAw%3D%3D" class="btn" target="_blank" rel="noopener noreferrer">
+                        <i class="fas fa-directions"></i> GET DIRECTIONS
+                    </a>
                 </div>
             </div>
         </section>
