--- a/pages/about.html
+++ b/pages/about.html
@@ -58,6 +58,27 @@
         </div>
     </section>
 
+    <!---Church Location Section-->
+    <section class="church-location scroll-reveal">
+        <div class="container">
+            <h2 class="animate-on-load">FIND US</h2>
+            <div class="location-container">
+                <div class="location-map">
+                    <a href="https://www.google.com/maps/place/Evening+Light+Tarbenacle/@-15.3657211,28.2543804,17z/data=!3m1!4b1!4m6!3m5!1s0x1940f554c7607119:0x22f3783f425856c5!8m2!3d-15.3657263!4d28.2569553!16s%2Fg%2F11h89fzxlg?authuser=0&entry=ttu&g_ep=EgoyMDI1MTAyOC4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">
+                        <img src="../assets/images/eltmap.png" alt="Evening Light Tabernacle Location in Lusaka - Click to view on Google Maps" loading="lazy">
+                    </a>
+                </div>
+                <div class="location-info">
+                    <h3><i class="fas fa-map-marker-alt"></i> Our Location</h3>
+                    <p>Visit us at Evening Light Tabernacle in Lusaka, Zambia. We'd love to welcome you to our church family! Click the map or the button below to get directions.</p>
+                    <a href="https://www.google.com/maps/place/Evening+Light+Tarbenacle/@-15.3657211,28.2543804,17z/data=!3m1!4b1!4m6!3m5!1s0x1940f554c7607119:0x22f3783f425856c5!8m2!3d-15.3657263!4d28.2569553!16s%2Fg%2F11h89fzxlg?authuser=0&entry=ttu&g_ep=EgoyMDI1MTAyOC4wIKXMDSoASAFQAw%3D%3D" class="btn" target="_blank" rel="noopener noreferrer">
+                        <i class="fas fa-directions"></i> GET DIRECTIONS
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <div id="footer"></div>
     <script src="../js/main.js" type="module"></script>
