--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -106,7 +106,7 @@
         <section id="announcements-section" class="admin-section">
             <div class="section-header">
                 <h2><i class="fas fa-bullhorn"></i> Manage Announcements</h2>
-                <p>Create and manage church announcements</p>
+                <p>Create and manage church announcements. Set one as active to display on homepage.</p>
             </div>
 
             <div class="form-card">
@@ -129,17 +129,8 @@
                         <textarea id="announcementText" rows="5" required placeholder="Enter the full announcement text..."></textarea>
                     </div>
 
-                    <div class="form-group">
-                        <label for="announcementPriority">Priority</label>
-                        <select id="announcementPriority">
-                            <option value="normal">Normal</option>
-                            <option value="high">High Priority</option>
-                        </select>
-                        <small class="form-help">High priority announcements are highlighted</small>
-                    </div>
-
-                    <h4 style="margin-top: 20px; margin-bottom: 10px; font-size: 16px; color: var(--primary-dark);">
-                        <i class="fas fa-link"></i> Optional Links
+                    <h4 style="margin-top: 20px; margin-bottom: 10px; font-size: 16px; color: #1e3a8a;">
+                        <i class="fas fa-link"></i> Optional Contact Links
                     </h4>
                     <div class="link-inputs-group">
                         <div class="form-group">
@@ -183,7 +174,8 @@
             </div>
 
             <div class="content-list">
-                <h3>Active Announcements</h3>
+                <h3>All Announcements</h3>
+                <p class="info-text"><i class="fas fa-info-circle"></i> Check "Set as Active" to display an announcement on the homepage. If no announcement is active, the most recent one will be shown.</p>
                 <div id="announcementsList"></div>
             </div>
         </section>
