--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -46,6 +46,9 @@
 
     <!-- Footer -->
     <div id="footer"></div>
+    
+    <!-- Lightbox will be dynamically inserted here by JavaScript -->
+    
     <script src="../js/main.js" type="module"></script>
 </body>
 </html>
